chore: modify blog

--- a/博客/《谈判：如何在博弈中获得更多》读后感.md
+++ b/博客/《谈判：如何在博弈中获得更多》读后感.md
@@ -12,7 +12,7 @@
 
 不，[《谈判：如何在博弈中获得更多》](https://book.douban.com/subject/30203275/)这本书告诉我们，任何人发起的沟通，只要有一方说不行，那么就是两败俱伤。
 
-为什么是两败俱伤呢？如果我们直接拒绝了，那么对方肯定会不愉快，那么在以后的合作中可能不会那么融洽，他甚至会给你穿小鞋。另一方面，既然对方这么说了，那肯定对某个东西有益处，比如同时让你做这个那么同事就可以不做，于是对同事有益处；产品又提需求可能对用户或者公司有益处，如果我们直接拒绝了，那么这个益处就消失了，那么就是变相利益受损了。
+为什么是两败俱伤呢？如果我们直接拒绝了，那么对方肯定会不愉快，那么在以后的合作中可能不会那么融洽，他甚至会给你穿小鞋。另一方面，既然对方这么说了，那么做这件事肯定对他有益处，比如同事让你做这个那么他就可以不做，于是对他有益处；产品又提需求可能对用户或者公司有益处，如果我们直接拒绝了，那么这个益处就消失了，其实就是变相利益受损了。
 
 那么这种场景应该怎么办呢？
 
@@ -20,7 +20,7 @@
 
 >> 谈判是我们从想要我们东西的人那里获得我们想要的东西的过程。
 
-我们在工作中，经常会遇到一些要我们东西的时刻，很多时候我们都直接把这个东西无偿或者友情给别人了，甚至不惜损伤自己的利益。但是更好的方式是，思考我们想要从别人那里拿什么东西作为交换，然后来谈判。
+我们在工作中，经常会遇到一些别人要我们东西的时刻，很多时候我们都直接把这个东西无偿或者友情给别人了，甚至不惜损伤自己的利益。但是更好的方式是，思考我们想要从别人那里拿什么东西作为交换，然后来谈判。
 
 比如产品加了需求，如果你都默不作声的加班做了，那么你就是一个冤大头。你应该想一下你要从产品那里获取什么东西？如果时间不够，你可以要求更多的排期。如果产品经常提需求又不更新文档，你可以趁这个时候要求产品把新需求写进文档里面。如果你确实有时间做，你也可以说明一下有时间，证明你确实是思考过时间的，为以后时间不够而要求更多的排期打下基础。甚至你可以把你之前想让产品做的事提出来作为交换。
 
@@ -36,8 +36,21 @@
 
 如果产品提出新需求，那么问题是什么？是排期不够？还是技术实现有难度？或者我们觉得这个需求完全没必要做？如果排期不够，那么去和项目经理反馈增加排期；如果技术实现有难度，那么多想想怎么实现或者找熟悉的人寻求帮助；如果我们觉得这个需求完全没必要做，那么去了解这个需求背后的深层次原因。
 
-如果测试不断反复问一些技术细节，那么问题又是什么？是测试每次都会来打断我的工作？那么让测试把不重要也不紧急的问题积累多了再来问。是测试记住技术细节？为什么测试记不住技术细节呢？是没有更新文档吗？那么及时更新技术文档就好了。
+如果测试反复问一些技术细节，那么问题又是什么？是测试每次都会来打断我的工作？那么让测试把不重要也不紧急的问题积累多了再来问。是测试记不住技术细节？为什么测试记不住技术细节呢？是没有更新文档吗？那么及时更新技术文档就好了。
 
+### 用“失信”反击对方！
 
+>> 用“失信”反击对方！将他们的违约行为说成是信誉问题。这样，他们就没有借口说自己的违约行为可以“补救”，或者认为在30天内或其他任何时间对违约行为进行补救，就可以跟没事儿人一样了。
 
+有些时候，我们没有找到理由去支撑自己给出的建议或者去反驳别人给出的建议时，有一个万能的说法，那就是失信，以对方不守信用作为切入点。
+
+比如我有一次预约外卖，晚上九点钟的时候送到，但是九点的时候商家给我打电话说餐已经出了，但是没有骑手接单，问我要不要取消订单，我思考良久也没有找到商家做错的地方，商家餐都已经做了，又不能说他没做，餐是骑手送的，也不能说他没送，但是我觉得取消订单是最最差的决定。
+
+这个时候可以从失信入手，我预计九点钟吃外卖，现在吃不到了，这损失谁来负责？商家负责。商家为什么要负责，因为他们失信了，他们不守承诺，他们本来承诺九点钟能给我们送到餐，但是最后没有，即使是外部责任没有骑手接单，但是最终应该由商家来负责。
+
+### 单价不变，打包价可以变
+
+>> 很少有交易是完全由价格决定的。任何交易都有很多变量。哪里有变量，哪里就有谈判的可能。因此，议价只不过是谈判中众多可交换变量中的一个而已。
+
+交易一般都是由很小的部分组成的，每个部分的单价不变，但是需不需要剔除某些部分是可以谈判的，比如说如果对方觉得这个价格太贵了，那么我们根据对方的需求，看其中哪个服务对方最没兴趣，然后剔除即可。
 
