refactor: add segmenttree

--- a/算法篇.md
+++ b/算法篇.md
@@ -820,6 +820,76 @@ class NumArray {
 
 ### 区间查询（线段树，范围更新，懒标记）
 
+```ts
+class SegmentTree {
+  map: Map<number, number>
+  lazy: Map<number, number>
+
+  constructor() {
+    this.map = new Map<number, number>()
+    this.lazy = new Map<number, number>()
+  }
+
+  // book(start: number, end: number): number {
+  //   this.update(start, end - 1, 0, 10 ** 9, 1)
+  //   return this.map.get(1) || 0
+  // }
+
+  query(start: number, end: number, l: number, r: number, idx: number): number {
+    if (start > r || end < l) {
+      return 0
+    }
+
+    if (start <= l && r <= end) {
+      return this.map.get(idx) || 0
+    }
+
+    // 这里查询开点的时候向下传递
+    this.pushDown(idx)
+
+    const mid = l + (r - l >> 1)
+    const left = this.query(start, end, l, mid, idx * 2)
+    const right = this.query(start, end, mid + 1, r, idx * 2 + 1)
+    return Math.max(left, right)
+  }
+
+  update(start: number, end: number, l: number, r: number, idx: number): void {
+    if (start > r || end < l) {
+      return
+    }
+
+    if (start <= l && r <= end) {
+      this.map.set(idx, 1 + (this.map.get(idx) || 0))
+      // 因为这里没有向下传递，所以要加一个懒标记，在查询或者开点的时候向下传递
+      this.lazy.set(idx, 1 + (this.lazy.get(idx) || 0))
+      return
+    }
+
+    // 这里开点的时候向下传递
+    this.pushDown(idx)
+
+    const mid = l + (r - l >> 1)
+    this.update(start, end, l, mid, idx * 2)
+    this.update(start, end, mid + 1, r, idx * 2 + 1)
+    this.map.set(idx, Math.max(this.map.get(idx * 2) || 0, this.map.get(idx * 2 + 1) || 0))
+  }
+
+  pushDown(idx: number): void {
+    const { map, lazy } = this
+    if (lazy.has(idx)) {
+      const lazyVal = lazy.get(idx) || 0
+      const leftIdx = idx * 2
+      const rightIdx = idx * 2 + 1
+      map.set(leftIdx, lazyVal + (map.get(leftIdx) || 0))
+      map.set(rightIdx, lazyVal + (map.get(rightIdx) || 0))
+      lazy.set(leftIdx, lazyVal + (lazy.get(leftIdx) || 0))
+      lazy.set(rightIdx, lazyVal + (lazy.get(rightIdx) || 0))
+      lazy.delete(idx)
+    }
+  }
+}
+```
+
 ### 区间查询（线段树，动态建树）
 
 
